2017-01-28, Mario Campos <mario@mariocampos.io>
- Extended the semantics of the -i command-line option to include
  AF_INET interface names. So, instead of passing an IP address
  of the local host, one may pass an interface name, such as 'em0'.

2017-01-24, Mario Campos <mario@mariocampos.io>
- Removed the PORT command, to prevent the potential of a 'bounce'
  attack. Unfortunately, this removal also limits oftpd from
  running as a FTP proxy server to other FTP servers. For more
  information on the FTP 'bounce' attack, see RFC 2577.

2004-03-25, Shane Kerr <shane@time-travellers.org>
- Philippe Oechslin <philippe.oechslin@epfl.ch> discovered a DoS
  vulnerability.  As reported:
  "When the server receives a port command with a number that is
  higher than 255 the server crashes and has to be restarted manually.
  The port command can even be given before the user has given a
  username and a password."
  Yikes.  In some ways this isn't *so* bad, as the chroot+setuid of
  oftpd means you are unlikely to have your server further
  compromised, but it does point to a flaw with using threaded C as
  the implementation language: if any connection has problems, your
  application is more-or-less hosed.
  Anyway, a one line fix.
- Version 0.3.7 released.

2001-06-21, Shane Kerr <shane@time-travellers.org>
- #ifdef wrap GLOB_ABORTED for really old gcc compilers (Slackware or
  older installations).
- Add code to skip command line options that are intended for "ls".

2001-06-12, Shane Kerr <shane@time-travellers.org>
- Disabled support for sendfile() on FreeBSD.  It appears to me that
  there's a bug in the sendfile() user-level library.  I would welcome
  advice from any FreeBSD developer wishing to set me straight.

2001-06-01, Shane Kerr <shane@time-travellers.org>
- Changed SIZE command to return error for directories.

2001-05-28, Shane Kerr <shane@time-travellers.org>
- Version 0.3.6 released.
- Beat FreeBSD into submission.  Now compiles (and runs!) on FreeBSD